# rust-file-hash

./: .gitignore  Cargo.toml  LICENSE  README.md  check.hash
src/: cli.rs  hasher.rs  main.rs
