[package]
name = "rfhash"
version = "1.0.1"
edition = "2021"
authors = ["gupingan <gupingan6@outlook.com>"]
description = "高性能文件哈希计算器 - 支持多种算法、内存映射、并行处理"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
blake3 = "1.5"
memmap2 = "0.9"
rayon = "1.10"
indicatif = "0.17"
colored = "2.1"
anyhow = "1.0"
hex = "0.4"
glob = "0.3"
chrono = "0.4"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"
